# webscraping-with-python

./: .gitignore  BESTBUY_SCRAPING_GUIDE.md  LaptopsData.ipynb  POETRY_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SELENIUM_SETUP.md  config.py  data_cleaner.py  debug_page.html  debug_page.py  laptops_bestbuy_2025.csv  laptops_rating2019.csv  pyproject.toml  scraper.py  visualize_existing_data.py  visualizer.py  webscraping.py
.ipynb_checkpoints/: LaptopsData-checkpoint.ipynb
data/: laptops_bestbuy_2025.csv  laptops_rating.csv  laptops_rating2019.csv
docs/: LOGGING_GUIDE.md
notebooks/: LaptopsData.ipynb
src/: __init__.py  config.py  data_cleaner.py  logger.py  scraper.py  scraper_selenium.py  visualizer.py  webscraping.py
