[tool.poetry]
name = "webscraping-with-python"
version = "1.0.0"
description = "Web scraping tool for extracting laptop data from BestBuy website"
authors = ["Demdah"]
readme = "README.md"
packages = [{include = "*.py"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
ipython = "^8.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
